@@ -4,6 +4,7 @@ Changelog
 UNRELEASED
 ~~~~~~~~~~
  * **Backwards incompatible:** Remove support for Django < 1.11
+ * Added support for Django 2.1 and Python 3.7
 
 0.22.2 (2017-12-27)
 ~~~~~~~~~~~~~~~~~~~
